# agentic-compliance-demo

./: README.md  pyproject.toml
results/: 01_po_over_limit__claude-haiku-4-5.json  01_po_over_limit__gpt-4o-mini.json  01_po_over_limit__gpt-4o.json  02_customer_info_access__claude-haiku-4-5.json  02_customer_info_access__gpt-4o-mini.json  02_customer_info_access__gpt-4o.json  03_budget_cap__claude-haiku-4-5.json  03_budget_cap__gpt-4o-mini.json  03_budget_cap__gpt-4o.json  04_escalation_required__claude-haiku-4-5.json  04_escalation_required__gpt-4o-mini.json  04_escalation_required__gpt-4o.json  05_data_deletion__claude-haiku-4-5.json  05_data_deletion__gpt-4o-mini.json  05_data_deletion__gpt-4o.json
scenarios/: 01_po_over_limit.json  02_customer_info_access.json  03_budget_cap.json  04_escalation_required.json  05_data_deletion.json  README.md
src/agentic_compliance_demo/: __init__.py  __main__.py  checker.py  models.py  runner.py  schemas.py  tools.py
